fixed typing text overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,9 @@ a:active {
 .type-it {
     color: #00A8D0;
     white-space: pre-wrap;
-    max-width: 100%;
+    max-width: 96%;
     font-size: 26px;
+    margin: 25px auto;
 }
 
 .slide-2 {
